<resources>
    <string name="app_name">DemoKtx</string>
    <string name="phone_number">Phone number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">Signup</string>
    <string name="no_internet">No Internet Connection!!</string>
    <string name="loading">Loading &#8230;</string>
    <string name="cannot_empty">Can\'t Empty</string>
    <string name="full_name_cannot_empty">Full name can\'t empty</string>
    <string name="number_cannot_empty">Phone number can\'t empty</string>
    <string name="number_not_valid">Phone number is not valid.</string>
    <string name="email_cannot_empty">Email can\'t empty</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="password_cannot_empty">Password can\'t empty</string>
    <string name="cnfrm_password_cannot_empty">Confirm Password can\'t empty</string>
    <string name="password_not_matched">Password not matched</string>
    <!--<string name="cannot_empty">Can\'t Empty</string>-->
    <!--<string name="cannot_empty">Can\'t Empty</string>-->
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reference_id_optional">Reference Id(Optional)</string>
    <string name="forgot_password_desc">Enter your Mobile number below and click on Reset password button. We\'ll help you to reset your password.</string>
    <string name="verify">Verify</string>
    <string name="didnt_get_code">didn\'t get code?</string>
    <string name="resend">Resend</string>
    <string name="change_password">Change Password</string>
    <string name="congratulations">Congratulations</string>
    <string name="change_label">You can change your password.</string>
    <string name="successfully_registered">You have successfully registered with Physio Active.</string>
    <string name="your_patient_id">Your Patient ID is</string>
    <string name="home">Home</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_not_valid">OTP not valid</string>
    <string name="welcome_to_demoktx_active">Welcome to demoktx demo</string>
    <string name="what_you_are_looking_for">What you are looking for?</string>
    <string name="book_specialist">Book Specialist</string>
    <string name="appointments">Appointments</string>
    <string name="consultations">Consultations</string>
    <string name="health_tips">Health Tips</string>
    <string name="profile">Profile</string>
    <string name="select_demoktxtherapist">Select demoktxtherapist</string>
    <string name="select_a_time_slot">Select a Time Slot</string>
    <string name="title_activity_service_details_scrolling">ServiceDetailsScrolling</string>
    <string name="otp_first_text">One Time Password (OTP) has been sent to</string>
    <string name="otp_last_text">please enter the code and change your password.</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="lorem_ipsum">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with</string>
    <string name="action_settings">Settings</string>
    <string name="maps_api_key">AIzaSyDu5oWAX-1pOAsVudUs6ppO0YZrAtEQCxA</string>
    <string name="facebook_app_id">AIzaSyDu5oWAX-1pOAsVudUs6ppO0YZrAtEQCxA</string>
    <string name="my_appointments">My Appointments</string>
    <string name="delete">Delete</string>
    <string name="rebook">Rebook</string>
    <string name="patient_details">Patient Details</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="direction">Direction</string>
    <string name="small_bullet">\u2022</string>
    <string name="big_bullet">\u25CF</string>
    <string name="camera">Camera</string>


</resources>
