<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:src="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp18"
            android:text="@string/forgot_password_heading"
            android:textColor="@color/white"
            style="@style/appTextStyle"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_icon"
        android:layout_marginTop="@dimen/dp20"
        android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/appTextStyle"
            android:textSize="@dimen/sp14"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password_desc"/>

        <RelativeLayout
            android:id="@+id/number_layout"
            android:layout_below="@id/desc_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginTop="@dimen/dp30">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="false"
                app:ccp_showFullName="false"
                android:layout_centerVertical="true"
                app:ccp_textSize="@dimen/sp16"
                app:ccp_showNameCode="false">
            </com.hbb20.CountryCodePicker>

            <EditText
                android:id="@+id/number_et"
                android:layout_toEndOf="@id/ccp"
                android:layout_toRightOf="@id/ccp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:background="@null"
                style="@style/appTextStyle"
                android:textColorHint="@color/dullBlack"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/dp4"
                android:paddingStart="@dimen/dp4"
                android:paddingEnd="@dimen/dp4"
                android:paddingRight="@dimen/dp4"
                android:textSize="@dimen/sp16"
                android:layout_centerVertical="true"
                android:inputType="number" />

            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_dp"
                android:background="@color/divider"/>


        </RelativeLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_below="@id/number_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp80"
            android:layout_marginBottom="@dimen/dp15"
            android:background="@drawable/sp_blue_button25radius"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="@style/appTextStyle"
            android:textSize="@dimen/sp16"
            android:text="@string/reset_password"/>



    </RelativeLayout>

    </ScrollView>
</RelativeLayout>