<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:src="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp18"
            android:text="@string/otp_verification"
            android:textColor="@color/white"
            style="@style/appTextStyle"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_icon"
        android:layout_marginTop="@dimen/dp20"
        android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:orientation="vertical">

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/appTextStyle"
        android:textSize="@dimen/sp14"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

        <com.chaos.view.PinView
            android:layout_below="@id/desc_tv"
            android:id="@+id/pinview_otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
            android:cursorVisible="false"
            android:inputType="number"
            app:itemHeight="@dimen/dp45"
            app:itemRadius="@dimen/dp10"
            app:itemWidth="@dimen/dp45"
            android:layout_marginTop="@dimen/dp30"
            app:itemCount="6"
            android:gravity="center_horizontal"
            app:lineColor="@color/divider" />

        <Button
            android:id="@+id/verify_button"
            android:layout_below="@id/pinview_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp80"
            android:layout_marginBottom="@dimen/dp15"
            android:background="@drawable/sp_blue_button25radius"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="@style/appTextStyle"
            android:textSize="@dimen/sp16"
            android:text="@string/verify"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp15">

            <TextView
                android:id="@+id/label_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                style="@style/appTextStyle"
                android:textColor="@drawable/sp_text_pressed_dull_black"
                android:text="@string/didnt_get_code"/>

            <TextView
                android:id="@+id/label_resend"
                android:layout_toRightOf="@id/label_or"
                android:layout_toEndOf="@id/label_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp14"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_marginStart="@dimen/dp3"
                style="@style/appTextStyle"
                android:textColor="@drawable/sp_text_pressed_blue"
                android:text="@string/resend"/>


        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>